# atlas_hdf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py  shp2atlas.py
src/: pybind.cpp  shapefile.hpp
tests/: test.py  test_dataset.cpp
